<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kid_bg"
    android:orientation="vertical"
    android:padding="30dp">

    <!-- 标题 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_set_password"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"/>

    <!-- 密码输入框 -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_edittext"
        android:hint="@string/hint_password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="10dp"
        android:layout_marginBottom="20dp"/>

    <!-- 确认密码输入框 -->
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_edittext"
        android:hint="@string/hint_confirm_password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:gravity="center"
        android:textSize="18sp"
        android:padding="10dp"/>

    <!-- 保存按钮 -->
    <Button
        android:id="@+id/btn_save_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@color/purple_500"
        android:text="保存密码"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>